--- a/RepoZ.UI.Win.Wpf/MainWindow.xaml
+++ b/RepoZ.UI.Win.Wpf/MainWindow.xaml
@@ -25,32 +25,35 @@
 
 		<materialDesign:Transitioner Name="transitionerMain"
 									 SelectedIndex="0">
-			<ListBox Name="lstRepositories"
+			<StackPanel>
+				<TextBox x:Name="txtFilter" TextChanged="txtFilter_TextChanged" FontSize="17" />
+				<ListBox Name="lstRepositories"
 					 HorizontalContentAlignment="Stretch"
 					 MouseDoubleClick="lstRepositories_MouseDoubleClick"
 					 ContextMenuOpening="lstRepositories_ContextMenuOpening"
 					 SelectionMode="Extended">
-				<ListBox.ItemTemplate>
-					<DataTemplate>
-						<StackPanel>
-							<TextBlock Text="{Binding Name}"
+					<ListBox.ItemTemplate>
+						<DataTemplate>
+							<StackPanel>
+								<TextBlock Text="{Binding Name}"
 									   ToolTip="{Binding Path}"
 									   TextElement.FontSize="17"
 									   Foreground="{DynamicResource AccentColorBrush}"
 									   Margin="8, 4, 8 ,4" />
-							<TextBlock Text="{Binding CurrentBranch}"
+								<TextBlock Text="{Binding CurrentBranch}"
 									   Margin="8, 4, 8 ,4" />
-							<TextBlock Text="{Binding Status}"
+								<TextBlock Text="{Binding Status}"
 									   Margin="8, 4, 8 ,4" />
-						</StackPanel>
-					</DataTemplate>
-				</ListBox.ItemTemplate>
-				<ListBox.ContextMenu>
-					<ContextMenu Name="mnuRepositoryContext"
+							</StackPanel>
+						</DataTemplate>
+					</ListBox.ItemTemplate>
+					<ListBox.ContextMenu>
+						<ContextMenu Name="mnuRepositoryContext"
 								 FontSize="12">
-					</ContextMenu>
-				</ListBox.ContextMenu>
-			</ListBox>
+						</ContextMenu>
+					</ListBox.ContextMenu>
+				</ListBox>
+			</StackPanel>
 			<ScrollViewer>
 				<StackPanel>
 					<TextBlock Name="txtHelp"
