Make the Win app a floating popup like on Mac

--- a/RepoZ.UI.Win.Wpf/MainWindow.xaml
+++ b/RepoZ.UI.Win.Wpf/MainWindow.xaml
@@ -20,7 +20,7 @@
 					  Title="RepoZ"
 					  Height="500"
 					  Width="350"
-					  ShowMaxRestoreButton="False">
+					  ShowMaxRestoreButton="False" ShowInTaskbar="False" ShowCloseButton="False" ShowMinButton="False" IsMinButtonEnabled="False" IsMaxRestoreButtonEnabled="False" IsCloseButtonEnabled="False">
 
 	<Grid Margin="10">
 
